# smol_md

./: .gitignore  README.md  index.html  package-lock.json  package.json  smol_md_design_doc_visual_update.md  vite.config.ts
docs/: SmolMD_MacP0Task_v1.md
release/: smol_md_1.0.0_aarch64.dmg
scripts/: build-windows.ps1  run-desktop.ps1  run-tests.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: file-commands.toml
src-tauri/src/: lib.rs  main.rs
src/components/: FindBar.tsx  RichEditor.tsx  SourceEditor.tsx  StatusBar.tsx  Toolbar.tsx  TopTabs.tsx
src/hooks/: useBeforeCloseWarning.ts  useDocumentState.ts  useInPageFind.ts  useKeyboardShortcuts.ts
src/services/: fileService.ts
src/styles/: app.css
src/utils/: documentModel.ts  editorStats.ts  keyboardShortcuts.ts  markdown.ts  platform.ts  recentDocuments.ts  saveSafety.ts
test-files/: frontmatter.md  headings-and-lists.md  links-and-code.md  simple.md  weird-markdown.md
tests/: documentModel.test.ts  editorStats.test.ts  keyboardShortcuts.test.ts  recentDocuments.test.ts  testHarness.ts
