[package]
name = "smol_md"
version = "1.0.0"
description = "A tiny focused Markdown editor for Windows."
authors = ["smol_md"]
edition = "2021"

[lib]
name = "smol_md_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
